--- a/src/app/modules/blogs/edit/edit.html
+++ b/src/app/modules/blogs/edit/edit.html
@@ -7,36 +7,27 @@
   ></minds-banner>
 </header>
 
-<form
-  (submit)="save()"
-  class="mdl-grid blogs-grid m-blog-container mdl-color--white"
-  style="max-width:740px"
-  *ngIf="blog.guid"
->
-  <div class="mdl-grid" style="width: 100%">
-    <div class="mdl-cell mdl-cell--12-col">
+<form (submit)="save()" style="max-width:740px" *ngIf="blog.guid">
+  <div style="width: 100%">
+    <div>
       <minds-textarea
         name="title"
         [(mModel)]="blog.title"
-        class="m-h1-input"
         placeholder="Your title"
         i18n-placeholder="@@BLOGS__EDIT__TITLE_PLACEHOLDER"
       ></minds-textarea>
     </div>
     <!-- Owner box -->
-    <div class="mdl-cell mdl-cell--5-col minds-blog-ownerblock">
-      <div class="minds-avatar" [hovercard]="session.getLoggedInUser().guid">
+    <div>
+      <div [hovercard]="session.getLoggedInUser().guid">
         <a [routerLink]="['/', session.getLoggedInUser().username]">
           <img
             src="{{cdnUrl}}icon/{{session.getLoggedInUser().guid}}/small/{{session.getLoggedInUser().icontime}}"
-            class="mdl-shadow--2dp"
           />
         </a>
       </div>
-      <div class="minds-body">
-        <a
-          [routerLink]="['/', session.getLoggedInUser().username]"
-          class="mdl-color-text--blue-grey-500"
+      <div>
+        <a [routerLink]="['/', session.getLoggedInUser().username]"
           >{{session.getLoggedInUser().name}}</a
         >
         <span *ngIf="blog.time_created"
@@ -46,7 +37,7 @@
     </div>
   </div>
 
-  <div class="mdl-cell mdl-cell--12-col minds-blog-descriptions">
+  <div>
     <ng-container *ngIf="!shouldUseCKEditor(); else newEditor">
       <m-inline-editor
         name="description"
@@ -76,50 +67,80 @@
     <m-captcha name="blog-captcha" [(ngModel)]="captcha"></m-captcha>
   </div>
 
-  <div class="mdl-cell mdl-cell--12-col">
-    <button
-      type="submit"
-      class="m-button m-button--text m-button--draft"
-      *ngIf="!blog.published"
-      [disabled]="!canSave || pendingUploads.length !== 0 || !validThreshold"
-      i18n="@@BLOGS__EDIT__SAVE_DRAFT_ACTION"
-    >
-      Save draft
-    </button>
-    <button
-      type="submit"
-      class="m-button m-button--text m-button--submit"
-      (click)="blog.published = 1"
-      [disabled]="!canSave || pendingUploads.length !== 0 || !validThreshold"
-      i18n="@@BLOGS__EDIT__PUBLISH_ACTION"
-    >
-      Publish
-    </button>
-    <div
-      *ngIf="inProgress"
-      class="m-wire--creator--submit-label mdl-spinner mdl-js-spinner is-active"
-      [mdl]
-    ></div>
-  </div>
+  <ng-template #menu>
+    <ul data-cy="meatball-menu">
+      <li>
+        <m-dropdownMenu
+          [menu]="licenseMenu"
+          [anchorPosition]="{ top: '0' }"
+          triggerClass="m-dropdownMenu__item"
+          data-cy="meatball-menu-visibility"
+        >
+          <span>License</span>
+          <m-icon iconId="chevron_right"></m-icon>
+        </m-dropdownMenu>
+      </li>
+
+      <li>
+        <m-dropdownMenu
+          [menu]="visibilityMenu"
+          [anchorPosition]="{ top: '0' }"
+          triggerClass="m-dropdownMenu__item"
+          data-cy="meatball-menu-visibility"
+        >
+          <span>Visibility</span>
+          <m-icon iconId="chevron_right"></m-icon>
+        </m-dropdownMenu>
+      </li>
+    </ul>
+  </ng-template>
+
+  <ng-template #licenseMenu>
+    <ul data-cy="meatball-menu-license-menu">
+      <li
+        *ngFor="let licenseItem of licenseItems"
+        (click)="setLicense(licenseItem.value)"
+      >
+        <span class="m-dropdownMenu__item">
+          <span>{{ licenseItem.text }}</span>
+          <m-icon
+            iconId="check"
+            *ngIf="blog.license === licenseItem.value"
+          ></m-icon>
+        </span>
+      </li>
+    </ul>
+  </ng-template>
+
+  <ng-template #visibilityMenu>
+    <ul data-cy="meatball-menu-license-menu">
+      <li
+        *ngFor="let accessItem of accessItems"
+        (click)="setAccessId(accessItem.value)"
+      >
+        <span>{{ accessItem.text }}</span>
+        <m-icon
+          iconId="check"
+          *ngIf="blog.access_id === accessItem.value"
+        ></m-icon>
+      </li>
+    </ul>
+  </ng-template>
+
+  <ng-template #paywallMenu>
+    <ul data-cy="meatball-menu-license-menu">
+      <m-wire-threshold-input
+        [(threshold)]="blog.wire_threshold"
+        [(enabled)]="blog.paywall"
+        (validThreshold)="validThreshold = $event"
+        #thresholdInput
+      ></m-wire-threshold-input>
+    </ul>
+  </ng-template>
 
   <div
     class="mdl-cell mdl-cell--12-col m-additional-block mdl-color-text--blue-grey-200"
   >
-    <div class="m-license-info">
-      <i class="material-icons">public</i>
-      <select
-        name="license"
-        [ngModel]="blog.license"
-        (change)="blog.license = $event.target.value"
-        class="mdl-color-text--blue-grey-300 m-form-select"
-        style="max-width:128px"
-      >
-        <option value="" i18n="@@BLOGS__EDIT__LICENCE_PLACEHOLDER"
-          >-- License --</option
-        >
-        <option *ngFor="let l of licenses" [value]="l.value">{{l.text}}</option>
-      </select>
-    </div>
     <div class="m-category-info">
       <m-hashtags-selector
         #hashtagsSelector
@@ -128,17 +149,6 @@
         (tagsAdded)="onTagsAdded($event)"
         (tagsRemoved)="onTagsRemoved($event)"
       ></m-hashtags-selector>
-    </div>
-    <div class="m-visibility-info">
-      <i class="material-icons">visibility</i>
-      <select
-        name="access_id"
-        [ngModel]="blog.access_id"
-        (change)="blog.access_id = $event.target.value"
-        class="mdl-color-text--blue-grey-300 m-form-select"
-      >
-        <option *ngFor="let a of access" [value]="a.value">{{a.text}}</option>
-      </select>
     </div>
 
     <m-nsfw-selector
@@ -163,18 +173,63 @@
         (onError)="posterDateSelectorError($event)"
       ></m-poster-date-selector>
     </ng-container>
-  </div>
 
-  <div
-    class="mdl-cell mdl-cell--12-col m-blog-edit--metadata mdl-color-text--blue-grey-200"
-    *ngIf="blog.custom_meta"
-  >
-    <div class="m-blog-edit--toggle-wrapper">
-      <span
-        class="m-blog-edit--toggle"
-        (click)="toggle.value = !toggle.value"
-        #toggle
+    <button
+      type="submit"
+      *ngIf="!blog.published"
+      [disabled]="!canSave || pendingUploads.length !== 0 || !validThreshold"
+      i18n="@@BLOGS__EDIT__SAVE_DRAFT_ACTION"
+    >
+      Save draft
+    </button>
+    <m-button
+      class="m-composerToolbar__action"
+      [disabled]="
+          (inProgress$ | async) || (isPosting$ | async) || !(canPost$ | async)
+        "
+      [dropdown]="postButtonDropdown"
+      [dropdownAnchorPosition]="{ top: '100%', right: '0' }"
+      (onAction)="onPost($event)"
+      data-cy="post-button"
+    >
+      <ng-container
+        *ngIf="!(isEditing$ | async); else isEditingButtonText"
+        i18n="verb|@@COMMON__POST"
+        >Post</ng-container
       >
+      <ng-template #isEditingButtonText
+        ><ng-container i18n="@@COMMON__SAVE">Save</ng-container></ng-template
+      >
+    </m-button>
+
+    <button
+      type="submit"
+      (click)="blog.published = 1"
+      [disabled]="!canSave || pendingUploads.length !== 0 || !validThreshold"
+      i18n="@@BLOGS__EDIT__PUBLISH_ACTION"
+    >
+      Publish
+    </button>
+    <div
+      *ngIf="inProgress"
+      class="m-wire--creator--submit-label mdl-spinner mdl-js-spinner is-active"
+      [mdl]
+    ></div>
+
+    <m-dropdownMenu
+      triggerClass="m-composerTitleBar__menuButton"
+      menuClass="m-composerTitleBar__menu"
+      [anchorPosition]="{ top: '0', left: '0' }"
+      [menu]="menu"
+      [hidden]="inProgress"
+      data-cy="meatball-menu-trigger"
+    >
+      <m-icon iconId="more_vert"></m-icon>
+    </m-dropdownMenu>
+  </div>
+  <div *ngIf="blog.custom_meta">
+    <div class="m-blog-edit--toggle-wrapper">
+      <span (click)="toggle.value = !toggle.value" #toggle>
         Metadata
         <i class="material-icons m-material-icons-inline" *ngIf="!toggle.value"
           >arrow_drop_down</i
