--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.scss
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.scss
@@ -1,11 +1,12 @@
 .m-channelShop__memberships {
-  padding: 20px 40px;
+  padding: 20px 0;
 
   .m-channelShopMemberships__header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 0 40px;
   }
 
   .m-channelShopMemberships__title {
@@ -71,7 +72,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    flex-wrap: wrap; /* TODO: Remove this when carousel is implemented */
+    flex-wrap: nowrap; /* TODO: Remove this when carousel is implemented */
+    padding: 0 40px;
 
     > * {
       margin: 20px 40px 0 0;
