(feat): do not group currencies

--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.html
@@ -45,7 +45,7 @@
     </ng-container>
 
     <ng-template #consumerHeader>
-      <div class="m-channelShopMemberships__headerAction">
+      <div class="m-channelShopMemberships__headerAction" *ngIf="false">
         <span i18n="@@COMMON_USD">USD</span>
         <span
           ><m-toggle
