Support Tiers v2, Channel Shop tab and Support Tiers CRUD

--- a/src/app/modules/wire/v2/creator/shop/shop.component.html
+++ b/src/app/modules/wire/v2/creator/shop/shop.component.html
@@ -29,9 +29,23 @@
         [ngModel]="shop.selected$ | async"
         (ngModelChange)="shop.select($event)"
       >
-        <option value="" disabled i18n="@@CREATOR_SHOP__SELECT_SUPPORT_TIER"
+        <option value="null" disabled i18n="@@CREATOR_SHOP__SELECT_SUPPORT_TIER"
           >Select Support Tier</option
         >
+
+        <optgroup label="USD" i18n-label="@@CREATOR_SHOP__USD">
+          <option
+            *ngFor="let supportTier of groupedSupportTiers.usd"
+            [ngValue]="supportTier"
+          >
+            ${{ supportTier.usd | number }}
+            -
+            {{ supportTier.name }}
+            <ng-container *ngIf="supportTier.description">
+              - {{ supportTier.description }}
+            </ng-container>
+          </option>
+        </optgroup>
 
         <optgroup label="Tokens" i18n-label="@@CREATOR_SHOP__TOKENS">
           <option
@@ -39,22 +53,14 @@
             [ngValue]="supportTier"
           >
             <ng-container i18n="@@CREATOR_SHOP__OTHER"
-              >{supportTier.amount, plural, =1
-              {{{supportTier.amount | number}} token} other
-              {{{supportTier.amount | number}} tokens}}</ng-container
+              >{supportTier.tokens, plural, =1
+              {{{supportTier.tokens | number}} token} other
+              {{{supportTier.tokens | number}} tokens}}</ng-container
             >
             - {{ supportTier.name }}
-          </option>
-        </optgroup>
-
-        <optgroup label="USD" i18n-label="@@CREATOR_SHOP__USD">
-          <option
-            *ngFor="let supportTier of groupedSupportTiers.usd"
-            [ngValue]="supportTier"
-          >
-            ${{ supportTier.amount | number }}
-            -
-            {{ supportTier.description }}
+            <ng-container *ngIf="supportTier.description">
+              - {{ supportTier.description }}
+            </ng-container>
           </option>
         </optgroup>
       </select>
