Don't show description if no content #2924

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -106,7 +106,7 @@
       [class.m-activityContent__mediaTitle--noDescription]="!mediaDescription"
       *ngIf="mediaTitle"
     ></p>
-    <p [innerHtml]="mediaDescription | tags"></p>
+    <p *ngIf="mediaDescription" [innerHtml]="mediaDescription | tags"></p>
     <m-read-more--button
       *ngIf="!(service.shouldShowPaywall$ | async); else teaserFadeout"
       [v2]="true"
