--- a/src/app/modules/blogs/edit-v2/edit.html
+++ b/src/app/modules/blogs/edit-v2/edit.html
@@ -62,7 +62,8 @@
         type="text"
         placeholder="Blog Title"
         i18n-placeholder="@@BLOG_EDITOR__TITLE"
-        (change)="onTitleChange($event.target.value)"
+        [ngModel]="service.title$ | async"
+        (ngModelChange)="onTitleChange($event)"
       />
     </div>
     <div class="m-blogEditor__bodyContainer">
@@ -72,64 +73,5 @@
       ></m-blog__editor>
     </div>
   </div>
-  <div class="m-blogEditor__bottomBar">
-    <div class="m-blogEditor__options">
-      <div (click)="toggleMeta()" class="m-blogEditor__blogToggle">
-        <m-icon iconId="expand_more" *ngIf="!(showMeta$ | async)"></m-icon>
-        <m-icon iconId="expand_less" *ngIf="(showMeta$ | async)"></m-icon>
-        Meta
-      </div>
-
-      <!-- <m-hashtags-selector
-          #hashtagsSelector
-          [tags]="(service.tags$ | async).slice(0)"
-          (tagsChange)="onTagsChange($event)"
-        ></m-hashtags-selector>
-
-
-        <!-- <m-wire-threshold-input
-          [(threshold)]="(service.monetization$ | async).min"
-          [(enabled)]="(service.monetization$ | async).paywall"
-          (validThreshold)="validThreshold = $event"
-          #thresholdInput
-        ></m-wire-threshold-input> -->
-      <!-- 
-        <ng-container *mIfFeature="'post-scheduler'">
-          <m-poster-date-selector
-            *ngIf="checkTimePublished()"
-            [date]="getTimeCreated()"
-            (dateChange)="onTimeCreatedChange($event)"
-            (onError)="posterDateSelectorError($event)"
-          ></m-poster-date-selector>
-        </ng-container>  -->
-    </div>
-    <div class="m-blogEditor__saveButtons">
-      <span
-        class="m-blogEditor__draftSaved"
-        *ngIf="service.draftSaved$ | async"
-      >
-        Draft Saved
-      </span>
-      <m-shadowboxSubmitButton
-        class="m-blogEditor__saveDraftButton"
-        [disabled]="!(service.canPost$ | async)"
-        [saving]="service.inProgress$ | async"
-        (click)="save(true)"
-        i18n="@@BLOGS_EDITOR__SAVE_DRAFT"
-      >
-        Save Draft
-      </m-shadowboxSubmitButton>
-      <m-shadowboxSubmitButton
-        [disabled]="!(service.canPost$ | async)"
-        [saving]="service.inProgress$ | async"
-        (click)="save()"
-        i18n="@@BLOGS_EDITOR__PUBLISH_BLOG"
-      >
-        Publish Blog
-      </m-shadowboxSubmitButton>
-    </div>
-  </div>
-  <div class="m-blogEditor__metaContainer" *ngIf="showMeta$ | async">
-    <m-blogEditor__metadata></m-blogEditor__metadata>
-  </div>
+  <m-blogEditor__bottomBar></m-blogEditor__bottomBar>
 </div>
