--- a/src/app/common/components/paywall-badge/paywall-badge.component.html
+++ b/src/app/common/components/paywall-badge/paywall-badge.component.html
@@ -1,14 +1,17 @@
-<ng-container *ngIf="init && hasPaywall">
-  <div
-    *mIfFeature="'paywall-2020'"
-    class="m-paywallBadge"
-    [ngClass]="{
-      isPlus: paywallType === 'plus',
-      isCustom: paywallType === 'custom'
-    }"
-  >
-    <i *ngIf="paywallType !== 'plus'" class="material-icons">lock</i>
-    <span *ngIf="paywallType === 'plus'">PLUS</span>
-    <span *ngIf="paywallType === 'tier'">Members Only</span>
-  </div>
+<ng-container *mIfFeature="'paywall-2020'">
+  <ng-container *ngIf="init && hasPaywall">
+    <div
+      class="m-paywallBfadge"
+      [ngClass]="{
+        isPlus: paywallType === 'plus',
+        isCustom: paywallType === 'custom',
+        accentColor: accentColor,
+        topRightPosition: topRightPosition
+      }"
+    >
+      <i *ngIf="paywallType !== 'plus'" class="material-icons">lock</i>
+      <span *ngIf="paywallType === 'plus'">Minds+</span>
+      <span *ngIf="paywallType === 'tier'">Members Only</span>
+    </div>
+  </ng-container>
 </ng-container>
