--- a/src/app/modules/discovery/discovery.component.scss
+++ b/src/app/modules/discovery/discovery.component.scss
@@ -1,3 +1,8 @@
+m-discovery {
+  .m-tabs__tab > a {
+    font-size: 17px;
+  }
+}
 .m-discovery__sidebar {
   padding: 20px 40px;
   padding-right: 0;
@@ -28,6 +33,9 @@
     > div {
       flex: 1;
     }
+  }
+  m-paywallBadge .m-paywallBadge {
+    margin-right: 4px;
   }
   h4 {
     padding: 0;
