--- a/src/app/modules/discovery/feeds/feeds.component.html
+++ b/src/app/modules/discovery/feeds/feeds.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="m-goBack">
-  <a routerLink="/discovery" [queryParams]="{ reload: false }">
+  <a [routerLink]="parentPath" [queryParams]="{ reload: false }">
     <i class="material-icons">arrow_back</i
     ><span i18n="@@DISCOVERY_FEEDS__BACK">Back</span>
   </a>
