--- a/src/app/modules/discovery/suggestions/suggestions.component.html
+++ b/src/app/modules/discovery/suggestions/suggestions.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="m-goBack">
-  <a routerLink="/discovery" [queryParams]="{ reload: false }">
+  <a [routerLink]="parentPath" [queryParams]="{ reload: false }">
     <i class="material-icons">arrow_back</i
     ><span i18n="@@DISCOVERY_SUGGESTIONS__BACK">Back</span>
   </a>
