(fix): typo with paywall badge class

--- a/src/app/common/components/paywall-badge/paywall-badge.component.html
+++ b/src/app/common/components/paywall-badge/paywall-badge.component.html
@@ -1,7 +1,7 @@
 <ng-container *mIfFeature="'paywall-2020'">
   <ng-container *ngIf="init && hasPaywall">
     <div
-      class="m-paywallBfadge"
+      class="m-paywallBadge"
       [ngClass]="{
         isPlus: paywallType === 'plus',
         isCustom: paywallType === 'custom',
