--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.scss
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.scss
@@ -2,4 +2,10 @@ m-composer__monetizeV2__plus {
   m-shadowboxSubmitButton {
     margin-top: 30px;
   }
+
+  .m-composerPopup__checkbox {
+    @include m-theme() {
+      color: themed($m-white);
+    }
+  }
 }
