(fix): media paywall skewed

--- a/src/app/modules/newsfeed/activity/paywall/paywall.component.scss
+++ b/src/app/modules/newsfeed/activity/paywall/paywall.component.scss
@@ -1,7 +1,11 @@
 m-activity__paywall {
   display: block;
   width: 100%;
-  min-height: 100px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
   &.isPaywall2020 {
     height: 100%;
     position: absolute;
