(fix): legacy paywall skewed

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -6,6 +6,7 @@
   <m-activity__paywall
     *ngIf="service.shouldShowPaywall$ | async"
     [mediaHeight]="mediaHeight"
+    class="isPaywall2020"
   ></m-activity__paywall
 ></ng-container>
 <!-- ----------------------------------- -->
